samples/_failures_safe/1761453213_c85f67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b811600a.c: In function ‘main’:
./samples/SAFE/__tmp_b811600a.c:155:12: error: missing terminating " character
  155 |     printf("Decompressed data (%zu bytes):\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b811600a.c:155:5: error: expected expression at end of input
  155 |     printf("Decompressed data (%zu bytes):\n
      |     ^~~~~~
./samples/SAFE/__tmp_b811600a.c:155:5: error: expected declaration or statement at end of input
